
plugins {
    id 'java'
    id 'application'
}

repositories {
    jcenter() 
}

dependencies {
    implementation 'com.google.guava:guava:26.0-jre' 

    testImplementation 'junit:junit:4.12' 
}

sourceCompatibility = '1.8'
targetCompatibility = '1.8'
version = '1.2.1'

mainClassName = 'main.java.gossip.Main'
